--- a/package.json
+++ b/package.json
@@ -15,18 +15,21 @@
     "@types/jest": "^29.5.5",
     "@types/node": "20.7.1",
     "aws-cdk": "2.101.0",
+    "aws-sdk": "^2.1478.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "~5.2.2"
   },
   "dependencies": {
+    "@aws-cdk/assert": "^2.68.0",
     "@aws-cdk/aws-dynamodb": "^1.204.0",
     "@aws-cdk/aws-lambda": "^1.204.0",
     "@aws-cdk/aws-lambda-event-sources": "^1.204.0",
     "@aws-cdk/aws-s3": "^1.204.0",
     "@aws-cdk/aws-s3-notifications": "^1.204.0",
     "aws-cdk-lib": "2.101.0",
+    "aws-sdk-mock": "^5.8.0",
     "constructs": "^10.0.0",
     "source-map-support": "^0.5.21"
   }
