--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,8 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "commonjs",
+    "allowImportingTsExtensions": true,
+
     "lib": [
       "es2020",
       "dom"
