--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "cdk-project": "bin/cdk-project.js"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "tsc lambda/*.ts",
     "watch": "tsc -w",
     "test": "jest",
     "cdk": "cdk",
